--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ genephys/__pycache__
 genephys/__pycache__/*.pyc
 genephys/.DS_Store
 
+examples/.DS_Store
+examples/jupyter_notebooks/.DS_Store
 
 .DS_Store
 *.swp
